--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: washly
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
- sdk: ">=2.18.2 <3.0.0"
+  sdk: ">=2.18.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,37 +29,38 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.2.3
-  cloud_firestore: ^4.4.3 
+  cloud_firestore: ^4.4.3
   credit_card_type_detector: ^3.0.0
-  cupertino_icons: ^1.0.2  
+  cupertino_icons: ^1.0.2
   date_picker_timeline: ^1.2.3
-  easy_localization: ^3.0.1 
+  easy_localization: ^3.0.1
   firebase_auth: ^4.2.9
-  firebase_core: 
-  firebase_crashlytics: 
-  firebase_performance: 
-  firebase_storage: 
+  firebase_core:
+  firebase_crashlytics:
+  firebase_performance:
+  firebase_storage:
   flutter:
-    sdk: flutter  
+    sdk: flutter
   flutter_launcher_icons: ^0.12.0
   flutter_native_splash: ^2.2.16
   flutter_screenutil: ^5.6.0
-  flutter_session_manager: ^1.0.3 
+  flutter_session_manager: ^1.0.3
   flutter_spinkit: ^5.2.0
-  flutter_svg: 
+  flutter_svg:
   flutter_switch: ^0.3.2
   geocoding: ^2.0.5
   geolocator: ^9.0.2
-  get: ^4.6.5 
+  get: ^4.6.5
   google_api_headers: ^1.6.0
   google_fonts: ^4.0.3
   google_maps_flutter: ^2.2.1
-  google_place: ^0.4.7 
-  image_picker: ^0.8.6+4 
-  intl_phone_field: ^3.1.0 
+  google_place: ^0.4.7
+  image_picker: ^0.8.6+4
+  intl_phone_field: ^3.1.0
   permission_handler: ^10.2.0
-  pin_code_fields: ^7.4.0  
+  pin_code_fields: ^7.4.0
   animated_custom_dropdown: ^1.5.0
+  share_plus: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -77,16 +78,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  
+
   assets:
     - assets/images/
     - assets/translations/
-
 
 flutter_native_splash:
   image: assets/images/washly-logo.png
