store nd get appointment added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "java.configuration.updateBuildConfiguration": "interactive",
     "editor.codeActionsOnSave": {
-        "source.fixAll": true
-    },
+		"source.fixAll": "explicit"
+	},
     "debug.openDebug": "openOnDebugBreak",
 
 	// By default, VS Code will only switch to the Debug Console when you start
@@ -47,6 +47,6 @@
 		// current file when a language service does not provide its own completions.
 		// This results in code completion suggesting words when editing comments and
 		// strings. This setting will prevent that.
-		"editor.wordBasedSuggestions": false,
+		"editor.wordBasedSuggestions": "off",
 	}
 }
